Changing from auto generate zone and ward